feat: adding mydramalist scrapper and update swagger
