# internal/domain/dto/mdl/request/request.go
@@ -1,0 +1,17 @@
+package request
+
+type CreateMdl struct {
+	Name string `json:"name"`
+}
+
+type UpdateMdl struct {
+	ID   uint   `json:"-"`
+	Name string `json:"name"`
+}
+
+type QueryMdl struct {
+	Page     int    `query:"page"`
+	Limit    int    `query:"limit"`
+	Category string `query:"category"`
+	Sort     string `query:"sort"`
+}
